--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
