--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@tanstack/react-query": "^5.66.10",
+    "@toolpad/core": "^0.12.0",
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
@@ -21,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
