--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.0.6",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
