--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.0.6",
+    "jquery": "^3.7.1",
+    "jquery-circle-progress": "^1.2.2",
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
