--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL_LOCAL=https://logimetrix.co.in/api
+VITE_API_URL_LOCAL=http://192.168.1.47:4042
 REACT_APP_DISCOUNT=30
 REACT_APP_DISCOUN_MULTIPLE=1.3
 REACT_APP_SHOP_NAME=Adi Shakti
