--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-image-lightbox": "^5.1.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
