--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "framer-motion": "^12.0.6",
     "jquery": "^3.7.1",
     "jquery-circle-progress": "^1.2.2",
+    "libphonenumber-js": "^1.12.6",
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-image-lightbox": "^5.1.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
