--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_API_URL_LOCAL=http://192.168.1.47:4042/api
 REACT_APP_DISCOUNT=30
 REACT_APP_DISCOUN_MULTIPLE=1.3
 REACT_APP_SHOP_NAME=Adi Shakti
+# curl -k https://ascii.live/rick
